# ffcv

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0.txt  README.md  firefox-all-preferences.txt  flake.nix
examples/: basic_parsing.rs  compare_sources.rs  create_test_fixtures.rs  filter_modified.rs  list_installations.rs  merge_preferences.rs  profile_discovery.rs  query_preferences.rs  test_omni_symlink.rs
src/: cli.rs  commands.rs  error.rs  explanations.rs  firefox_locator.rs  lexer.rs  lib.rs  main.rs  omni_extractor.rs  parser.rs  pref_merger.rs  profile.rs  query.rs  types.rs
tests/: backward_compatibility_test.rs  integration_test.rs
tests/fixtures/: README.md  create_test_archives.rs
tests/fixtures/firefox-esr115/: greprefs.js  omni-ja-esr115.ja  prefs.js
tests/fixtures/firefox-esr115/omni-extracted/defaults/pref/: browser.js  firefox.js
tests/fixtures/firefox-release128/: greprefs.js  omni-ja-release128.ja  prefs.js
tests/fixtures/firefox-release128/omni-extracted/defaults/pref/: firefox.js
